@@ -1,3 +1,3 @@
-demo/model:asg2:sample2:iwave2:helm:grid:trace:sucore:base
+asg2:sample2:iwave2:helm:grid:trace:sucore:base
 
 
